--- a/Css externo/estilo.css
+++ b/Css externo/estilo.css
@@ -157,13 +157,28 @@ a.news {
     line-height: 40px;
     float: left;
     margin-top: 6em;
-    background-color:rgb(170, 0, 39);
     color: #fff;
+    background: rgb(170, 0, 39)
 }
 
-#navegação_vertical>ul a:hover{
+#navegação_vertical>ul a:hover {
     background: rgb(225, 0, 57);
     color: rgb(151, 0, 41);
+}
+
+#navegação_vertical>ul a#espaço4 {
+    text-indent: 28px;
+    width: 98px;
+}
+
+#navegação_vertical>ul a#espaço5 {
+    text-indent: 25px;
+    width: 140px;
+}
+
+#navegação_vertical>ul a#espaço6 {
+    text-indent: 25px;
+    width: 120px;
 }
 
 #espaço {
@@ -172,9 +187,98 @@ a.news {
 
 #espaço2 {
     margin-left: 13.3em;
-
+    line-height: 10px;
 }
 
 #espaço3 {
     margin-left: 12em;
+}
+
+
+#divisor {
+    height: 1em;
+    margin-bottom: -3px;
+    margin-left: 63.8px;
+}
+
+#divisor2 {
+    margin-left: 67px;
+    height: 1em;
+    margin-bottom: -3px;
+}
+
+#divisor3 {
+    margin-left: 95px;
+    height: 1em;
+    margin-bottom: -3px;
+}
+
+#divisor4 {
+    margin-left: 112.2px;
+    height: 1em;
+    margin-bottom: -3px;
+}
+
+#divisor5 {
+    margin-left: 61px;
+    height: 1em;
+    margin-bottom: -3px;
+}
+
+#divisor6 {
+    margin-left: 65.91px;
+    height: 1em;
+    margin-bottom: -3px;
+}
+
+#icon {
+    margin-left: -63px;
+    margin-top: -5px;
+    height: 1em;
+    margin-bottom: -2px;
+    height: 18px;
+
+}
+
+#icon1 {
+    margin-left: -70px;
+    margin-top: -7px;
+    height: 1.5em;
+    margin-bottom: -4.5px;
+    height: 20px;
+}
+
+#icon2 {
+    margin-left: -108px;
+    margin-top: -7px;
+    margin-bottom: -3.3px;
+    height: 16px;
+}
+
+#icon3 {
+    margin-left: -90px;
+    margin-top: -7px;
+    margin-bottom: -3.3px;
+    height: 15px;
+}
+
+#icon4 {
+    margin-left: -68px;
+    margin-top: -10px;
+    margin-bottom: -8.5px;
+    height: 23.5px;
+}
+
+#icon5 {
+    margin-left: -80px;
+    margin-top: -10px;
+    margin-bottom: -7.8px;
+    height: 27px;
+}
+
+#icon6 {
+    margin-left: -99px;
+    margin-top: -10px;
+    margin-bottom: -115px;
+    height: 27px;
 }
