--- a/Css externo/estilo.css
+++ b/Css externo/estilo.css
@@ -6,7 +6,8 @@ body{
     border: 1px solid red;
     padding-bottom: 200px;
     margin-bottom: 1.5em;
-    
+    background: rgb(41, 76, 113) url(../Imagens/fundo-removebg-preview.png) repeat-x bottom;
+    height: 3em;
 }
 
 .entrevistas {
