--- a/Css externo/estilo.css
+++ b/Css externo/estilo.css
@@ -49,18 +49,18 @@ body{
 
 .meio2 {
     width: 16em;
-    height: 20em;
-    margin-top: -36em;
+    height: 28.25em;
+    margin-top: -35em;
     text-align: left;
     margin-left: 14.5em;
     background: url(../Imagens/fundo-caixa.png);
-    
+
 }
 
 .meio3 {
     width: 16em;
-    height: 20em;
-    margin-top: -20em;
+    height: 28.25em;
+    margin-top: -28.25em;
     text-align: left;
     margin-left: 32.3em;
     background: url(../Imagens/fundo-caixa.png);
@@ -82,7 +82,6 @@ a.titulos {
 }
 
 a.link_meio {
-    border: 1px solid rgb(255, 0, 0);
     margin: 0 10px;
     padding: 2px;
     padding-left: 30px;
@@ -462,4 +461,78 @@ a.news {
     margin-bottom: -50px;
     border: 1px solid red;
     width: 200px;
+}
+
+#noticias{
+    margin: 0 10px;
+    padding: 10px;
+    padding-left: 0px;
+    margin-left: 10px;
+    margin-top: 20px;
+    padding-bottom: 235px;
+    background-color: #fff;
+    height: 130px;
+    width: 222.5px;
+}
+
+#noticia_1>img {
+    height: 50px;
+    width: 80px;
+    margin-left: 10px;
+}
+
+#noticia_1>a {
+    text-decoration: none;
+    position: absolute;
+    display: block;
+    line-height: 0;
+    margin-left: 102px;
+    margin-top: -70px;
+}
+
+#texto2 {
+    font-size: 10px;
+    margin-left: 110px;
+    margin-top: -35px;
+}
+
+#divisão {
+    border: 1px solid rgba(181, 183, 184, 0.404);
+    margin-left: 65px;
+    width: 100px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+#noticia_2>img {
+    height: 50px;
+    width: 80px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+#noticia_2>a{
+text-decoration: none;
+position: absolute;
+display: block;
+line-height: 0;
+margin-left: 100px;
+margin-top: -70px;
+}
+
+#tempo {
+    position: absolute;   
+    font-size: 10px;
+    text-align: right;
+    display: block;
+    color: rgb(151, 149, 149);
+    margin-left: 187.5px;
+    margin-top: 13px;
+}
+
+#tempo>img {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    margin-left: -13.5px;
 }
