--- a/Css externo/estilo.css
+++ b/Css externo/estilo.css
@@ -39,12 +39,13 @@ body{
 }
 
 .entrevistas1 {
-    border: 1px solid rgb(0, 255, 179);
     width: 12.5em;
     height: 28em;
     margin-top: 30em;
     text-align: left;
     margin-left: 5px;
+    background: url(../Imagens/fundo-caixa.png);
+    padding-bottom: -20px;
 }
 
 .meio2 {
@@ -88,8 +89,11 @@ a.link_meio {
     margin-left: 10px;
     margin-top: 10px;
     display: block;
-    
-   
+    background-color:rgb(225, 0, 57);
+   text-decoration: none;
+   color: #fff;
+   line-height: 0;
+
 }
 
 a.entrevistas1 {
@@ -535,4 +539,32 @@ margin-top: -70px;
     height: 10px;
     position: absolute;
     margin-left: -13.5px;
+}
+
+#news{
+  margin:10px;
+    padding: 2px;
+    padding-left: 30px;
+    display: block;
+    background-color:rgb(225, 0, 57);
+   text-decoration: none;
+   color: #fff;
+   line-height: 0;
+   margin-bottom: 40px;
+   float: left;
+   width: 150px;
+}
+
+#branco{
+    height: 80%;
+   margin-top: 30px;
+   background-color: #fff;
+}
+
+input#email {
+    width: 150px;
+    height: 20px;
+    margin-left: 22px;
+    margin-bottom: -40px;
+    float: ;
 }
